--- a/src/css/register.css
+++ b/src/css/register.css
@@ -26,9 +26,11 @@
     background-color: #ffffff; /* Change background color */
     color: black; /* Change text color */
     padding: 40px; /* Add padding */
+    padding-top:20px;
     text-align: center; /* Align text to the left */
   }
-  .left-side label {
+  /* Left Side Label */
+.left-side label {
     display: block;
     text-align: left;
     margin-left:14px;
@@ -136,7 +138,7 @@
     letter-spacing: 1px;
     text-transform: uppercase;
     transition: transform 80ms ease-in;
-    margin-top: 20px; /* Add space between input and button */
+    margin-top: 10px; /* Add space between input and button */
   }
   
   .button:hover {
@@ -154,8 +156,6 @@
   
   /* Paragraph */
   .paragraph {
+    text-align: left;
     font-family: 'Arial', Arial, sans-serif; /* Change font family */
   }
-  
-  
-  
