--- a/src/css/Chatbot.css
+++ b/src/css/Chatbot.css
@@ -1,4 +1,15 @@
-
+/* Chatbot.css */
+.floating-chat-btn {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed; /* Position the button relative to the viewport */
+    bottom: 6%; /* Distance from the bottom of the viewport */
+    right: 3%; /* Distance from the right of the viewport */
+}
 .App {
     position: absolute;
     top: 0;
