--- a/src/css/HeroSection.css
+++ b/src/css/HeroSection.css
@@ -4,11 +4,12 @@ video {
   height: 100%;
   position: fixed;
   z-index: -1;
+  opacity: 0.8;
 }
 
 .hero-container {
   /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
-  height: 100vh;
+  height: 50vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -19,54 +20,80 @@ video {
 }
 
 .hero-container > h1 {
-  color: #fff;
-  font-size: 75px;
-  margin-top: -100px;
+  color: white;
+  font-size: 180%;
+  text-align: center;
+  margin-top: 0.005%;
 }
 
 .hero-container > p {
+  text-align: center;
   margin-top: 8px;
-  color: #fff;
-  font-size: 32px;
+  color: white;
+  font-size: 100%;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
 }
 
 .hero-btns {
-  margin-top: 32px;
+  margin-top: 1%;
 }
 
 .hero-btns .btn {
-  margin: 6px;
+  display: block;
+  text-decoration: none;
+  background-color: white;
+  opacity: 0.7;
+  color: black;
+  border: 0.2%;
+  border-color: white;
+  transition: background-color 0.3s, color 0.3s; /* Add transition for smooth color change */
 }
 
-.fa-play-circle {
-  margin-left: 4px;
+.hero-btns .btn:hover {
+  background-color: gray; /* Change background color to light gray on hover */
+  color: white; /* Change text color to black on hover */
 }
+
+
 
 @media screen and (max-width: 960px) {
   .hero-container > h1 {
-    font-size: 70px;
-    margin-top: -150px;
+    margin-top: 0.005%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .hero-container > h1 {
-    font-size: 50px;
-    margin-top: -100px;
+    font-size: 180%;
+    margin-top: 0.005%;
   }
 
   .hero-container > p {
-    font-size: 30px;
+    font-size: 100%;
+    text-align: center;
   }
 
   .btn-mobile {
     display: block;
     text-decoration: none;
+    background-color: white;
+    opacity: 0.7;
+    color: black;
+    border: 0.2%;
+    border-color: white;
+    transition: background-color 0.3s, color 0.3s;
   }
 
   .btn {
     width: 100%;
+    background-color: white;
+    color: black;
+    border: 0.2%;
+    border-color: white;
   }
 }
+
+
+
+
