--- a/src/css/Trending.css
+++ b/src/css/Trending.css
@@ -1,5 +1,5 @@
 .trending-container {
-    background-color: #FAF9F6;
+    background-color: #FCFBF4;
     width: 100%;
     display: flex;
     justify-content: center;
