--- a/src/css/Button.css
+++ b/src/css/Button.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #fff;
+  --primary: #FCFCF6;
 }
 
 .btn {
@@ -12,21 +12,21 @@
 
 .btn--primary {
   background-color: var(--primary);
-  color: #242424;
+  color: black;
   border: 1px solid var(--primary);
 }
 
 .btn--outline {
   background-color: transparent;
-  color: #fff;
+  color: black;
   padding: 8px 20px;
-  border: 1px solid var(--primary);
+  border: 1px solid black;
   transition: all 0.3s ease-out;
 }
 
 .btn--medium {
   padding: 8px 20px;
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .btn--large {
@@ -37,7 +37,10 @@
 .btn--large:hover,
 .btn--medium:hover {
   transition: all 0.3s ease-out;
-  background: #fff;
-  color: #242424;
+  background: #FCFCF6;
+  color: black;
   transition: 250ms;
 }
+
+
+
