--- a/src/css/Trending.css
+++ b/src/css/Trending.css
@@ -1,18 +1,121 @@
 .trending-container {
-    background-color: #FCFBF4;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%; /* Adjust height as needed */
+  background-color: white;
+  padding: 30px;
+  display: flex;
+  flex-wrap: wrap; /* Ensure items wrap to the next line if there's not enough space */
+  justify-content: center; /* Center items horizontally */
+}
+
+.video-container {
+  position: relative;
+  margin-bottom: 20px;
+  z-index: 1;
+}
+
+.create {
+  width: 100%;
+  height: auto;
+  display: block;
+  position: relative;
+  z-index: 2;
+}
+
+.about-us {
+  margin-top: 20px;
+}
+
+.trending-container h2,
+.trending-container h1 {
+  color: black;
+  font-size: 24px;
+  font-family: 'Arial', sans-serif;
+  font-weight: bold;
+  margin: 0;
+  margin-bottom: 20px;
+  text-align: center;
+  width: 100%; /* Ensure the heading takes up full width */
+}
+
+.categories-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.category {
+  position: relative;
+  margin: 0 10px 20px;
+  text-align: center;
+}
+
+.category img {
+  width: 200px;
+  height: 130px;
+  transition: filter 0.3s ease;
+  border-radius: 5px;
+  filter: brightness(100%);
+}
+
+.category h3 {
+  margin-top: 10px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.category h2 {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  color: white;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.category:hover img {
+  filter: brightness(50%);
+}
+
+.category:hover h2 {
+  opacity: 1;
+}
+.about-us h2 {
+  font-size: 28px; /* Adjust the font size */
+  color: #333; /* Change the text color */
+  margin-bottom: 15px; /* Add some bottom margin */
+}
+
+.about-us p {
+  font-size: 16px; /* Adjust the font size */
+  color: #666; /* Change the text color */
+  line-height: 1.6; /* Increase the line height for better readability */
+  margin-bottom: 10px; /* Add some bottom margin */
+}
+
+@media (min-width: 768px) {
+  .video-container {
+    width: 40%; /* Adjust the width of the video */
+    margin-right: 0px; /* Add space between video and about-us */
+    margin-left:200px;
+    margin-bottom: 60px;
   }
-  
-  .trending-container h2 {
-    color: black;
-    font-size: 100%; 
-    font-family: 'Arial', sans-serif; 
-    font-weight: bold; 
-    text-align: center;
-    margin: 0;
-    padding: 1.5%; 
+
+  .about-us {
+    margin-top: 0; /* Remove top margin */
+    margin-left: 20px; /* Remove left margin */
+    margin-right: 180px;
+    flex: 1; /* Allow about-us to grow and take remaining space */
   }
+  .about-us h2 {
+    font-size: 24px; /* Decrease font size for smaller screens */
+  }
+
+  .about-us p {
+    font-size: 14px; /* Decrease font size for smaller screens */
+  }
+}
+
