--- a/src/css/HeroSection.css
+++ b/src/css/HeroSection.css
@@ -1,10 +1,11 @@
 video {
   object-fit: cover;
   width: 100%;
-  height: 100%;
-  position: fixed;
+  height: 80%;
+  position: absolute;
   z-index: -1;
-  opacity: 0.8;
+
+  object-position: top;
 }
 
 .hero-container {
@@ -15,13 +16,13 @@ video {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.1);
   object-fit: contain;
 }
 
 .hero-container > h1 {
   color: white;
-  font-size: 180%;
+  font-size: 190%;
   text-align: center;
   margin-top: 0.005%;
 }
@@ -30,7 +31,7 @@ video {
   text-align: center;
   margin-top: 8px;
   color: white;
-  font-size: 100%;
+  font-size: 110%;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
     'Lucida Sans', Arial, sans-serif;
 }
@@ -91,6 +92,15 @@ video {
     color: black;
     border: 0.2%;
     border-color: white;
+  }
+  video {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
+    opacity: 0.8;
+    object-position: top; /* Set the video to show the top part */
   }
 }
 
