--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -4,17 +4,18 @@
   color: #fff;
   padding: 40px 20px; /* Added top and bottom padding */
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: row; /* Keep direction as row for larger screens */
+  justify-content: space-between; /* Add space between items */
   align-items: center;
   position: relative;
+  margin-top: 20px; /* Add margin to the top for smaller screens */
 }
 
 /* Footer Section */
 .footer-section {
   margin-bottom: 20px;
-  margin-left: 120px; /* Added margin left */
-  margin-right: 120px; /* Added margin right */
+  flex-grow: 1; /* Allow sections to grow equally */
+  text-align: center; /* Center text */
 }
 
 .footer-section h2 {
@@ -34,6 +35,7 @@
 /* Social Icons */
 .social-icons {
   display: flex;
+  justify-content: center; /* Center social icons */
 }
 
 .social-icons a {
@@ -72,7 +74,35 @@
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 20px; /* Add some space below the description */
   margin-top: 20px;
   font-size: 17px; /* Increased font size */
+}
+
+/* Media Query for smaller screens */
+@media (max-width: 768px) {
+  .footer-container {
+    flex-direction: column; /* Change direction to column for smaller screens */
+    align-items: center; /* Center items vertically */
+  }
+
+  .footer-section {
+    width: 100%; /* Set width to 100% for smaller screens */
+    max-width: 400px; /* Limit maximum width for better responsiveness */
+  }
+
+  .social-icons {
+    justify-content: center; /* Center social icons */
+  }
+
+  .footer-subscribe input[type='email'] {
+    margin-bottom: 10px; /* Add some space between input and button */
+  }
+
+  .footer-description {
+    text-align: center;
+    margin-bottom: 20px; /* Add margin-bottom */
+    margin-top: 20px;
+    font-size: 17px;
+  }
 }
