--- a/src/forum.css
+++ b/src/forum.css
@@ -365,7 +365,7 @@ a:hover {
 
     .banner-image {
         max-width: 100%; /* Ensure the image fits within the screen width */
-        height: auto; /* Maintain aspect ratio */
+        height: auto;
    
     }
 
